--- a/assets/pages/quiz/quiz.css
+++ b/assets/pages/quiz/quiz.css
@@ -6,15 +6,13 @@ body {
     font-family: 'roboto';
     background-color: #042d6b;
     color: white;
-    padding: 10px 10px;
+    padding: 0 10px;
     width: 60%;
     border-radius: 10px;
     cursor: pointer;
     display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 20px;
-    margin: .25rem;
+    margin: .25rem auto;
 }
 
 .choice-container:hover {
@@ -34,8 +32,9 @@ body {
 }
 
 .choice-text {
-    padding: 2rem;
+    padding: 1rem;
     width: 100%;
+    margin-top: 15px;
 }
 
 .correct {
@@ -51,32 +50,42 @@ body {
     justify-content: space-between;
 }
 
-.hud-prefix {
-    text-align: center;
+#progressText {
     font-size: 2rem;
+    text-align: left;
+}
+
+.hud-prefix {
+    font-size: 2rem;
+    text-align: center;
 }
 
 .time {
-    text-align: center;
+    text-align: right;
     font-size: 1.5rem;
+    margin: 0 auto;
+    width: 100%;
 }
 
-#hud-main-text {
-    text-align: right;
+#score {
+    text-align: center;
 }
 
 #progressBar {
-    width: 20rem;
+    display: flex;
+    width: 16rem;
     height: 3rem;
-    border: 0.2rem solid rgb(11, 223, 36);
-    margin-top: 2rem;
+    border: 0.2rem solid rgb(7, 160, 25);
+    margin-top: 1rem;
+    float: left;
+    margin-bottom: 1rem;
     border-radius: 50px;
     overflow: hidden;
 }
 
 #progressBarFull {
     height: 100%;
-    background: rgb(11, 223, 36);
+    background: rgb(7, 160, 25);
     width: 0%;
 }
 
