--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,3 +88,53 @@ a:link {
 button:active {
     transform: translateY(4px);
 }
+
+.fa-crown {
+    font-size: 1.25rem;
+    margin-left: 1rem;
+    color: white;
+}
+
+/* End Page CSS */ 
+.end-form-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30rem;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    border:none;
+    box-shadow: 0 0.1rem 1.4rem 0 rbga(86, 185, 235, 0.5);
+}
+
+input::placeholder {
+    color: white;
+}
+
+#username {
+    margin-bottom: 3rem;
+    width: 100%;
+    outline: none;
+}
+
+#end-text {
+    font-size: 2.4rem;
+    color: white;
+    text-align: center;
+}
+
+#saveScoreBtn {
+    border: none;
+}
+
+.fa-home {
+    margin-left: 1rem;
+    font-size: 2rem;
+    color: black;
+}
